# genesis_matsunaga_python

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  configure.ac  fortdep.py  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  tests.yml
demo/: demo.ipynb  test_demo.py
src/analysis/clustering/kmeans_clustering/: Makefile.am
src/analysis/converter/crd_convert/: Makefile.am
src/analysis/free_energy/mbar_analysis/: Makefile.am  Makefile.depends  mbar_analyze.fpp  mbar_control.fpp  mbar_main.fpp  mbar_matrix.fpp  mbar_option.fpp  mbar_option_str.fpp  mbar_setup.fpp
src/analysis/free_energy/wham_analysis/: Makefile.am
src/analysis/interface/genesis_interface/: __init__.py
src/analysis/interface/python_interface/: Makefile.am  Makefile.depends  README.md  __init__.py  aa_analysis_analysis.fpp  aa_analysis_c_mod.fpp  all_run.sh  atdyn_c_mod.fpp  avecrd_analysis.py  avecrd_c_mod.fpp  avecrd_impl.fpp  c2py_util.py  conv_f_c_util.fpp  crd_convert.py  crd_convert_c_mod.fpp  crd_convert_convert.fpp  crd_convert_impl.fpp  ctrl_files.py  custom_test_case.py  define_molecule.fpp  demo.ipynb  diffusion_analysis.py  diffusion_analysis_analyze.fpp  diffusion_analysis_main_c_mod.fpp  (+78 more)
src/atdyn/: Makefile.am  at_control.fpp  at_enefunc.fpp  at_enefunc_gbsa.fpp  at_enefunc_pme.fpp  at_experiments.fpp  at_remd.fpp
src/genepie/: __init__.py  avecrd_analysis.py  crd_convert.py  ctrl_files.py  custom_test_case.py  drms_analysis.py  exceptions.py  file_validators.py  genesis_exe.py  hb_analysis_count_atom.py  hb_analysis_count_snap.py  kmeans_clustering.py  libgenesis.py  libloader.py  msd_analysis.py  param_validators.py  py2c_util.py  rg_analysis.py  rmsd_analysis.py  s_molecule.py  s_trajectories.py  validation.py
src/genepie/tests/: test_avecrd.py  test_crd_convert.py  test_crd_convert_lazy.py  test_diffusion.py  test_drms.py  test_error_handling.py  test_hb_atom.py  test_hb_snap.py  test_integration.py  test_kmeans.py  test_mbar_1d.py  test_mbar_block.py  test_mdanalysis.py  test_mdtraj.py  test_msd.py  test_rg.py  test_rmsd.py  test_rmsd_lazy.py  test_trj.py  test_wham.py
src/genepy/: cli.py  ctrl_files.py  libgenesis.py  libloader.py  py2c_util.py  s_trajectories.py  s_trajectories_c.py  test.py
src/lib/: fileio_control.fpp
src/spdyn/: sp_experiments.fpp  sp_remd.fpp
(+11 files in other folders)
